--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -1,23 +1,23 @@
 global:
+  login: Login
+  logout: Logout
   start: Start
 main:
   title: Welcome to Hedera
+pages:
+  login:
+    forgot_password: Forgot password?
+    form:
+      errors:
+        missing_password: Password is required
+        missing_username: Username is required
+      fields:
+        password: Password
+        remember_me: Remember me
+        username: Username
+      submit: Submit
+    tab_title: Logging in • Hedera
+    title: Log in
 theme:
   dark: Dark
   light: Light
-
-
-pages:
-  login:
-    tab_title: Logging in • Hedera
-    title: Log in
-    form:
-      fields:
-        username: Username
-        password: Password
-        remember_me: Remember me
-      errors:
-        missing_username: Username is required
-        missing_password: Password is required
-      submit: Submit
-    forgot_password: Forgot password?
