--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -27,18 +27,17 @@ sidebar:
 pages:
   login:
     forgot_password: Mot de passe oublié ?
-    page_name: Connexion
-    title: Se connecter
+    title: Connexion
   files:
-    page_name: Fichiers
+    title: Fichiers
   favorites:
-    page_name: Favoris
+    title: Favoris
   upload:
-    page_name: Mettre en ligne
+    title: Mettre en ligne
   analytics:
-    page_name: Statistiques
+    title: Statistiques
   configuration:
-    page_name: Configuration
+    title: Configuration
 
 forms:
   login:
@@ -55,6 +54,8 @@ errors:
   unknown: Une erreur inattendue est survenue
   auth:
     invalid_credentials: Nom d'utilisateur ou mot de passe incorrect
+  tokens:
+    expired_or_invalid: Votre session a expiré, veuillez vous reconnecter
 
 theme:
   dark: Sombre
