Add Regex matching to login form

--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -51,6 +51,7 @@ forms:
   login:
     errors:
       missing_username: Username is required
+      invalid_username: Invalid username format
       missing_password: Password is required
     fields:
       password: Password
