--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -8,15 +8,26 @@ main:
   title: Bienvenue sur Hedera
 
 sizeUnits:
-  0: octets
-  10: Kio
-  20: Mio
-  30: Gio
-  40: Tio
-  50: Pio
-  60: Eio
-  70: Zio
-  80: Yio
+  binary:
+    0: octets
+    10: Kio
+    20: Mio
+    30: Gio
+    40: Tio
+    50: Pio
+    60: Eio
+    70: Zio
+    80: Yio
+  decimal:
+    0: octets
+    3: Ko
+    6: Mo
+    9: Go
+    12: To
+    15: Po
+    18: Eo
+    21: Zo
+    24: Yo
 unlimited-quota: Quota illimité
 
 sidebar:
