--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -8,15 +8,26 @@ main:
   title: Welcome to Hedera
 
 sizeUnits:
-  0: bytes
-  10: KiB
-  20: MiB
-  30: GiB
-  40: TiB
-  50: PiB
-  60: EiB
-  70: ZiB
-  80: YiB
+  binary:
+    0: bytes
+    10: KiB
+    20: MiB
+    30: GiB
+    40: TiB
+    50: PiB
+    60: EiB
+    70: ZiB
+    80: YiB
+  decimal:
+    0: bytes
+    3: KB
+    6: MB
+    9: GB
+    12: TB
+    15: PB
+    18: EB
+    21: ZB
+    24: YB
 unlimited-quota: Unlimited quota
 
 sidebar:
@@ -29,8 +40,8 @@ pages:
     forgot_password: Forgot password?
     title: Log in
   resetPassword:
-      title: Reset password
-      login: Back to login
+    title: Reset password
+    login: Back to login
   files:
     title: Files
     visibility:
