--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -45,6 +45,8 @@ pages:
     title: Statistiques
   configuration:
     title: Configuration
+  debug:
+    title: Débogage
 
 forms:
   submit: Valider
