--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -92,6 +92,13 @@ pages:
       error: The visibility could not be changed
       cancel: Cancel
       submit: Change
+    delete:
+      title: Delete a file
+      success: The file has been deleted
+      error: The file could not be deleted
+      warning: Are you sure you want to delete this file? This action is irreversible.
+      cancel: Cancel
+      submit: Delete
     search_by_name: Search by name...
   favorites:
     title: Favorites
@@ -121,6 +128,22 @@ forms:
       invalid_email: Invalid email address format
     fields:
       email: Email address
+
+actions:
+  files:
+    delete:
+      success:
+        title: Successfully deleted
+        message: The file “{name}” has been deleted
+    update:
+      visibility:
+        success:
+          title: Visibility changed
+          message: The file “{name}” is now {newVisibility}
+      name:
+        success:
+          title: Successfully renamed
+          message: The file “{oldName}” has been renamed to “{newName}”
 
 errors:
   unknown: An unknown error has occurred
