First settings page (wip)

--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -47,6 +47,8 @@ pages:
     title: Configuration
   debug:
     title: Debug
+  profile:
+    title: '{username}''s profile'
 
 forms:
   submit: Submit
