Fix file size input

--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -8,6 +8,7 @@ main:
   title: Bienvenue sur Hedera
 
 sizeUnits:
+  incorrect-format: Format de taille incorrect
   binary:
     0: octets
     10: Kio
