--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -49,6 +49,16 @@ pages:
     title: Debug
   profile:
     title: '{username}''s profile'
+    settings:
+      file_size_scale:
+        binary:
+          title: Binary scale
+          description: Units are based on powers of 2
+          summary: 1 KiB = 1024 bytes
+        decimal:
+          title: Decimal scale
+          description: Units are based on powers of 10
+          summary: 1 KB = 1000 bytes
 
 forms:
   submit: Submit
