--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -110,6 +110,7 @@ pages:
       title: Quelque chose s'est mal passé
       description: Impossible de charger la liste des fichiers
       retry_button: Réessayer
+      reset_button: Réinitialiser
   favorites:
     title: Favoris
   upload:
